--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 
 # Игнорируем временные файлы и артефакты сборки
 /bin/
-/pkg/
 /tmp/
 /out/
 
@@ -20,6 +19,11 @@
 
 # Файлы зависимостей Go
 vendor/
+gocache/
+go-cache/
+go-build/
+gopath/
+
 
 # Файлы тестов и покрытия
 coverage.txt
